--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases labs template",
-  "repository": "https://github.com/Crosshell/bazovichki_db_labs",
-  "author": "Vladyslav Berdychevskyi <vladyslavberdychevskyi@gmail.com>",
+  "repository": "https://github.com/5aradise/media-content-api",
+  "author": "Danyil Rozumovskyi <rozumovskyi.daniil@lll.kpi.ua>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
