add users and swagger docs

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 build:
-	go build -C cmd/media-content-api/ -o ../../bin/media-content-api
+	go build -o bin/media-content-api
 
 run: build
 	CONFIG_PATH=.env ./bin/media-content-api
